# async-kinesis

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  benchmark-requirements.txt  benchmark.py  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tests.py  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: DESIGN.md  YETANOTHER.md  cli.md  common-patterns.md  dogfood-soak.md  dynamodb-checkpointing.md  getting-started.md  metrics.md  testing.md  troubleshooting.md
kinesis/: __init__.py  aggregators.py  base.py  checkpointers.py  consumer.py  dynamodb.py  exceptions.py  metrics.py  processors.py  producer.py  prometheus.py  serializers.py  testing.py  timeout_compat.py  utils.py
kinesis/cli/: __init__.py  stream.py
scripts/: kinesis_dogfood.py  release.py
tests/: conftest.py  test_checkpoint_base_contract.py  test_checkpoint_ordering.py  test_checkpointers.py  test_consumer.py  test_dynamodb_checkpointer.py  test_integration.py  test_kinesis_dogfood_script.py  test_metrics_unit.py  test_mock_consumer.py  test_mock_integration.py  test_mock_producer.py  test_processors.py  test_producer.py  test_testing.py
tests/resharding/: README.md  resharding_test.py  test_resharding_detection.py  test_resharding_in_progress.py  test_resharding_integration.py  test_resharding_simple.py  test_start_during_resharding.py
